main/default/objects/Training_Plan__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <inlineHelpText>HEX Color code for the header background color (e.g. #dcdcdc, more examples in : http://www.color-hex.com/)</inlineHelpText>
    <label>Background Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>