main/default/objects/Training_Plan__c/fields/Enable_Self_Registration__c.field-meta.xml
<CustomField>
    <fullName>Enable_Self_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you&apos;d like to make this training plan available to all your company and allow users to create assignments on-the-fly.</description>
    <inlineHelpText>Check this box if you&apos;d like to make this training plan available to all your company and allow users to create assignments on-the-fly.</inlineHelpText>
    <label>Enable Self-Registration</label>
    <type>Checkbox</type>
</CustomField>