main/default/objects/Training_Plan__c/fields/Hide_Chatter_Photos__c.field-meta.xml
<CustomField>
    <fullName>Hide_Chatter_Photos__c</fullName>
    <inlineHelpText>Enable this option to hide chatter photos for the last users that have acquired the training plan achievement</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Hide Chatter Photos</label>
    <type>Checkbox</type>
</CustomField>