main/default/objects/Training_Plan__c/fields/Intro_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Intro_Video_URL__c</fullName>
    <inlineHelpText>URL for the embedded intro video shown in the training plan detail page</inlineHelpText>
    <label>Intro Video URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>