main/default/objects/Training_Plan__c/fields/Self_Registration_Access__c.field-meta.xml
<CustomField>
    <fullName>Self_Registration_Access__c</fullName>
    <inlineHelpText>&quot;Public&quot; or blank allows users to create assignments &quot;on the fly&quot;. &quot;Requires Approval&quot; logs an approval request that is later handled by the Training Plan owner.&quot;External&quot; exposes this training plan to all users.</inlineHelpText>
    <label>Self-Registration Access</label>
    <picklist>
        <controllingField>Enable_Self_Registration__c</controllingField>
        <picklistValues>
            <fullName>Public</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>External</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Requires Approval</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>