main/default/objects/Training_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Only Active training plans will be visible to learners, Draft plans will be visible for Learning Admins</inlineHelpText>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>Draft</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Archived</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Active</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>