main/default/objects/Training_Plan__c/fields/Total_Ratings_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Ratings_Sum__c</fullName>
    <label>Total Ratings Sum</label>
    <summarizedField>Training_Plan_Feedback__c.Rating__c</summarizedField>
    <summaryFilterItems>
        <field>Training_Plan_Feedback__c.Rating__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Training_Plan_Feedback__c.Training_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>