main/default/objects/Training_Plan__c/fields/Training_Plan_Rating__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan_Rating__c</fullName>
    <formula>IF( Total_Ratings_Count__c &gt; 0 , Total_Ratings_Sum__c/Total_Ratings_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Plan Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>