main/default/objects/Training_Plan__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be greater than End Date</errorMessage>
</ValidationRule>