main/default/objects/Training_Plan__c/validationRules/Empty_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISBLANK(Start_Date__c) &amp;&amp; ISBLANK(End_Date__c)) || (ISBLANK(Start_Date__c) &amp;&amp; !ISBLANK(End_Date__c))</errorConditionFormula>
    <errorMessage>You must set a value for Start and End date or leave both empty</errorMessage>
</ValidationRule>